fixed login bug, scrollbar and buffer bug

--- a/BlockUSign.Ionic/src/app/app.scss
+++ b/BlockUSign.Ionic/src/app/app.scss
@@ -18,8 +18,8 @@
 
 // split pane overrides
 .split-pane-md.split-pane-visible > .split-pane-side {
-    min-width: 300px;
-    max-width: 300px;
+    min-width: 310px;
+    max-width: 325px;
     border-right: 0px solid #dedede;
     border-left: 0;
 }
